--- a/concepts/actions.mdx
+++ b/concepts/actions.mdx
@@ -21,4 +21,14 @@ description: "Atomic Python units: structure, contracts, workflow"
 3. Test with small Payloads via Execute.
 4. Reuse across Flows and as Agent tools.
 
+## Loop Support
+
+Actions now support iterative execution with loops:
+
+- **For loops** — Iterate over collections and lists
+- **While loops** — Continue until a condition is met
+- **Loop state management** — Proper handling of iteration context and variables
+
+This allows Actions to handle batch processing, repeated operations, and conditional iterations natively.
+
 > warning: Dependencies — Only packages that do not require binary installs in the build image are supported.
