--- a/concepts/project/deployments.mdx
+++ b/concepts/project/deployments.mdx
@@ -13,7 +13,16 @@ description: "Publish Project state and recommended flow"
 1. Finalize changes on the Canvas.
 2. Re‑run Payloads for sanity checks.
 3. Click Deploy.
-4. Re‑hit APIs/Schedules if applicable.
+4. **Test immediately** — The system now transitions seamlessly to chat for testing after deployment.
+5. Re‑hit APIs/Schedules if applicable.
+
+## Deploy & Chat integration
+
+Recent improvements streamline the deploy-to-test workflow:
+
+- **Automatic chat transition** — After deploying, you can immediately test via chat interface
+- **Seamless workflow** — Build → Deploy → Chat → Iterate without manual navigation
+- **Better validation** — Test your deployment interactively before exposing to production
 
 ## Troubleshooting
 
