--- a/security/overview.mdx
+++ b/security/overview.mdx
@@ -206,6 +206,18 @@ Found a security issue? We appreciate responsible disclosure.
 - High severity: Patch within 7 days
 - Medium/low: Patch in next regular release
 
+## Infrastructure monitoring
+
+### Enhanced observability
+
+Recent infrastructure improvements provide better security monitoring:
+
+- **Kubernetes Promtail** — Comprehensive log aggregation with label extraction and pipeline processing
+- **Secure credential management** — 1Password integration for automated, secure environment variable handling
+- **Better deployment security** — Automated dependency checks and secure secrets management
+
+These improvements enhance our ability to detect, investigate, and respond to security events in real-time.
+
 ## Incident response
 
 ### Detection
@@ -215,6 +227,7 @@ Found a security issue? We appreciate responsible disclosure.
 - Unusual API usage patterns
 - Data exfiltration attempts
 - Privilege escalation attempts
+- **Real-time log aggregation** — Kubernetes-based monitoring for immediate anomaly detection
 
 **Alerts trigger:** Automated response + human investigation
 
