--- a/workspace/chat/chat-interface.mdx
+++ b/workspace/chat/chat-interface.mdx
@@ -31,6 +31,8 @@ Agent responses can include:
 - Lists and structured data
 - Links and references
 - Status updates and progress indicators
+- **Execution steps** — Real-time visibility into action execution with detailed step-by-step progress
+- **Interactive actions** — Actionable buttons and UI elements within chat responses
 
 ### Context awareness
 
@@ -39,6 +41,8 @@ The agent has access to:
 - All enabled projects (from the right panel)
 - Your organization's data and permissions
 - Previous chat sessions (depending on configuration)
+- **Execution context** — Live execution data and step tracking for debugging
+- **Enhanced tool calling** — Improved reliability and error handling for agent tools
 
 ## Best practices
 
