--- a/changelog/index.mdx
+++ b/changelog/index.mdx
@@ -3,51 +3,8 @@ title: "Changelog"
 description: "Latest updates, features, and improvements to Triform"
 ---
 
-## 📊 Recent Development Summary (August 22 - October 22, 2025)
 
-**2 Months of Intensive Development**
-
-This period represents a major transformation of the Triform platform with:
-- **521 total commits** (256 backend, 265 frontend)
-- **1,292+ files changed** across the platform
-- **~50,000 net lines of code added**
-- **25+ database migrations**
-
-### 🎯 Major Achievements
-
-**Chat & AI Systems**
-- Complete chat agent implementation with tool integration
-- Variable widget system for dynamic inputs
-- Message history, cancellation, and reverting capabilities
-- Enhanced agent settings and configuration
-
-**Builder System**
-- Complete builder refactor with full chat agent integration
-- Requirements gathering and completion system
-- Flow builder with graph dependency tracking
-- Remote builder execution support
-
-**Infrastructure**
-- LiteLLM integration for AI gateway with load balancing
-- Global Loki logging implementation
-- Redis improvements (pools, pub/sub, streams)
-- Kubernetes deployment with auto-scaling
-- WebSocket tracing for real-time updates
-
-**Developer Experience**
-- Magic link authentication
-- Project variables (formerly environment variables)
-- User invite system
-- Project deletion capability
-- Mobile support (rudimentary)
-- Sample payload generation
-- Comprehensive execution tracing
-
----
-
-## November 2025
-
-### v0.11.5 — November 4-10, 2025
+### Adding oAuth - November 4-10, 2025
 
 **Major Enterprise Feature Release:** OAuth 2.0 Integration  
 **Total Commits:** 38 (26 backend, 12 frontend)  
@@ -60,7 +17,7 @@ This period represents a major transformation of the Triform platform with:
 
 #### 🚀 Major Features & Enhancements
 
-**OAuth 2.0 System — Enterprise-Grade Authentication** ⭐⭐⭐
+**OAuth 2.0 System**
 
 The largest single feature of this period, fundamentally changing how Triform handles third-party integrations:
 
